# wasm-component-polyfill

./: mod.ts
lower/: intrinsics.js  mod.ts  string.ts
parser/: Cargo.toml  mod.ts  module-type.wit  parser.wit  wasm.ts
parser/bindings/: intrinsics.js  parser.d.ts  parser.js
parser/src/: lib.rs
scripts/: build-wasm.ts
